@@ -54,7 +54,7 @@ __print_termination_message(const char * termination_message)
 	{
 		termination_message_printed = TRUE;
 
-		if(NOT __no_standard_io)
+		if(NOT __no_standard_io && __num_iob > STDERR_FILENO)
 		{
 			fputs((termination_message != NULL) ? termination_message : "Abnormal program termination",stderr);
 
