@@ -108,6 +108,11 @@
 
 - Added the first real C99 function: _Exit().
 
+- assertion failures early on during program initialization
+  should no longer spell big trouble on account of the stdio
+  data structures possibly not being in a well-defined and
+  initialized state.
+
 
 c.lib 1.189 (5.3.2005)
 
